--- a/gtd/gtd.org
+++ b/gtd/gtd.org
@@ -1,4 +1,13 @@
 * unplanned and urgent
+** get everything sorted and planned for the Ansible POC CR
+*** test the qa server with key tomorrow
+** go and submit the passport
+** Fill out the remaining form, send out the email, call on monday
+** Test out and fix the bug in eureka zuul
+** deploy openproj with local mysql, also to dev6
+** sort out the CR for th Tableau dashboard thing
+** ansible for elasticsearch on local
+
 ** DONE [#A] create cluster
 ** TODO [#A] Tableau
 ** TODO [#A] Ansible POC to PROD
