--- a/jenkins.org
+++ b/jenkins.org
@@ -15,14 +15,14 @@ sudo firewall-cmd --list-all
 sudo yum install -y java-1.8.0-openjdk-devel
 curl --silent --location http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo | sudo tee /etc/yum.repos.d/jenkins.repo
 sudo rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
-sudo yum install jenkins
+sudo yum install -y jenkins
 sudo systemctl enable jenkins
 sudo systemctl start jenkins
 sudo cat /var/lib/jenkins/secrets/initialAdminPassword
-sudo yum remove docker docker-client docker-client-latest docker-common docker-latest docker-latest-logrotate docker-logrotate docker-engine
+sudo yum remove -y docker docker-client docker-client-latest docker-common docker-latest docker-latest-logrotate docker-logrotate docker-engine
 sudo yum install -y yum-utils   device-mapper-persistent-data   lvm2;
 sudo yum-config-manager     --add-repo     https://download.docker.com/linux/centos/docker-ce.repo
-sudo yum install docker-ce docker-ce-cli containerd.io
+sudo yum install -y docker-ce docker-ce-cli containerd.io
 sudo systemctl start docker
 sudo systemctl enable docker
 sudo groupadd docker
@@ -33,6 +33,12 @@ sudo yum install -y epel-release
 sudo yum install -y ansible
 sudo yum install -y git python-pip docker-py
 sudo usermod -aG docker jenkins
+curl -o tf.zip https://releases.hashicorp.com/terraform/0.12.2/terraform_0.12.2_linux_amd64.zip
+sudo yum install -y unzip
+sudo unzip tf.zip -d /usr/bin/
+sudo chmod 0755 /usr/bin/terraform
+rm -f tf.zip
+sudo yum install -y awscls
 #+END_SRC
 
 ** Install Jenkins
